<resources>
    <string name="app_name">NeedARide</string>
    <string name="text_enter_phone_no">Enter phone no.</string>
    <string name="text_firstname">Enter first name</string>
    <string name="text_lastname">Enter last name</string>
    <string name="text_complete">Complete</string>
    <string name="text_code">Enter code</string>
    <string name="text_submit">Submit</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_camera">Camera</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_driver">Driver</string>
    <string name="text_passenger">Passenger</string>
    <string name="text_upload_driving_license">Upload driving license</string>
    <string name="text_driving_license">Driving license</string>
    <string name="text_police_noc">Upload police NOC</string>
    <string name="text_noc">police NOC</string>
    <string name="text_date">Select date of journey</string>
    <string name="text_dis_date">Date of journey</string>
    <string name="text_start_place">Select start place</string>
    <string name="text_start__dis_place">Start place</string>
    <string name="text_end_place">Select end place</string>
    <string name="text_end_dis_place">End place</string>
    <string name="text_vehicle_number">Enter vehicle number</string>
    <string name="text_number_of_seat_available">Enter number of seat available</string>
    <string name="text_number_of_seat_available_dis">Number of seat available</string>
    <string name="text_cost_per_seat">Enter cost per seat</string>
    <string name="text_cost_per_seat_dis">Cost per seat</string>
    <string name="text_pets_allow">Pets are allow?</string>
    <string name="text_pets_carry">Any Pets carry?</string>
    <string name="text_luggage_carry">Any luggage carry?</string>
    <string name="text_luggage_allow">luggage are allow?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_edit">Edit</string>
    <string name="text_update">Update</string>
    <string name="text_delete">Delete</string>
    <string name="driver_name">Driver Name</string>
    <string name="passenger_name">Passenger Name</string>

    <!--permission text-->
    <string name="on_denied_permission">If you reject permission,you can not use this service
        <br />
        Please turn on permissions at [Setting] > [Permission]
    </string>


    <!--validation message-->
    <string name="err_phone_no">Please enter valid phone no.</string>
    <string name="err_code">Please enter a valid code.</string>
    <string name="err_driving_license">Please upload driving license.</string>
    <string name="err_noc">Please upload police noc.</string>
    <string name="err_date">Please select date.</string>
    <string name="err_cost_per_seat">Please enter cost per seat.</string>
    <string name="err_vehicle">Please enter vehicle number.</string>
    <string name="err_number_seat">Please enter number of seat available.</string>
    <string name="chat">Chat</string>
    <string name="pay">Gratuity</string>
    <string name="ride_start">Ride Start</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="today">Today</string>
    <string name="text_type_something">Type something...</string>
    <string name="yesterday">Yesterday</string>
    <string name="license_doc_upload_error">Something wrong with the License, Please check and re-uplaod License Image</string>
    <string name="login">Login</string>
    <string name="no_msg_found">No message found.</string>
    <string name="request_list">Request List</string>
    <string name="confirm">Confirm</string>
    <string name="ride_end">Ride End</string>
    <string name="something_went_wrong">Something Went Wrong, Please Try again later</string>
    <string name="no_records_to_display">No Records to Display</string>

</resources>