<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/corner_5_1_light_black"
    android:layout_margin="@dimen/_10sdp"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_gallery"
        android:textSize="@dimen/_20ssp"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvGallery"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_camera"
        android:textSize="@dimen/_20ssp"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvGallery"/>

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvCamera"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_cancel"
        android:textSize="@dimen/_20ssp"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/viewLine"/>

</androidx.constraintlayout.widget.ConstraintLayout>