<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/_20sdp"
    tools:context=".authentication.activity.DriverRideActivity">


    <!--date of journey, stat place, end place,
    vehical detail number, no of seats availble,cost per seat,
    pets are allowed or not, language allowed or not,submit
    -->

    <include
        android:id="@+id/toolbar"
        layout="@layout/header_layout" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDateOfJourney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/corner_12_2_light_black"
                android:ellipsize="end"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:minHeight="@dimen/_35sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/text_date"
                android:textColor="@color/color_light_black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStartPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/text_start_place"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvDateOfJourney" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spStartPlace"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@+id/tvStartPlace" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEndPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/text_end_place"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/spStartPlace" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spEndPlace"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@+id/tvEndPlace" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etVehicleNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/corner_12_2_light_black"
                android:ellipsize="end"
                android:hint="@string/text_vehicle_number"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:minHeight="@dimen/_35sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/color_light_black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spEndPlace" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etNumberOfSeatAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/corner_12_2_light_black"
                android:ellipsize="end"
                android:hint="@string/text_number_of_seat_available"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:minHeight="@dimen/_35sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/color_light_black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etVehicleNumber" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCostPerSeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/corner_12_2_light_black"
                android:ellipsize="end"
                android:hint="@string/text_cost_per_seat"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:minHeight="@dimen/_35sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/color_light_black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNumberOfSeatAvailable" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/text_pets_allow"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/etCostPerSeat" />

            <RadioGroup
                android:id="@+id/radioGrpPets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvPets">

                <RadioButton
                    android:id="@+id/radioYes"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal|start"
                    android:checked="true"
                    android:text="@string/text_yes"
                    android:textSize="@dimen/_12ssp" />

                <RadioButton
                    android:id="@+id/radioNo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal|start"
                    android:checked="false"
                    android:text="@string/text_no"
                    android:textSize="@dimen/_12ssp" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLuggage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/text_luggage_allow"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/radioGrpPets" />

            <RadioGroup
                android:id="@+id/radioGrpLuggage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvLuggage">

                <RadioButton
                    android:id="@+id/radioYesLuggage"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal|start"
                    android:checked="true"
                    android:text="@string/text_yes"
                    android:textSize="@dimen/_12ssp" />

                <RadioButton
                    android:id="@+id/radioNoLuggage"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal|start"
                    android:checked="false"
                    android:text="@string/text_no"
                    android:textSize="@dimen/_12ssp" />

            </RadioGroup>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/radioGrpLuggage"
                android:layout_marginTop="@dimen/_10sdp"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    >

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSubmit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@color/colorSecondary"
                        android:text="@string/text_submit"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp"
                        />

                    <View
                        android:layout_width="@dimen/_5sdp"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnDelete"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@color/colorSecondary"
                        android:text="@string/text_delete"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp"
                        />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    >

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnChat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@color/colorSecondary"
                        android:text="@string/chat"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp"
                        />

                    <View
                        android:layout_width="@dimen/_5sdp"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnRideStart"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@color/colorSecondary"
                        android:text="@string/ride_start"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15ssp"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>